# calculator_api

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/calculator_api/: core.py
tests/: test_core.py
