[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator_api"
version = "0.1.0"
description = "A simple calculator API with CI/CD demonstration"
authors = [
    {name = "Sergey", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
calculator_api = "calculator_api.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
calculator_api = "src/calculator_api"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0", 
    "flake8>=6.0.0"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]